# data-analysis-platform

./: .gitignore  README.md  start.ps1  start.sh
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/core/: config.py  errors.py  logging.py  security.py
backend/app/db/: base.py  pragmas.py  session.py
backend/app/models/: __init__.py  analysis_input.py  analysis_run.py  dataset.py  dataset_column.py  dataset_operation.py  dataset_revision.py  export.py  refresh_token.py  run_event.py  user.py
backend/app/repositories/: analysis_runs.py  datasets.py  exports.py  users.py
backend/app/schemas/: analysis_m2.py  analysis_m3.py  analysis_m4.py  analysis_m5.py  analysis_run.py  auth.py  chart_contract.py  common.py  dataset.py  export.py  preprocess.py
backend/app/services/: analysis_request_builder.py  analysis_service.py  auth_service.py  chart_contract_service.py  dataset_ingest_service.py  dataset_profile_service.py  dataset_version_service.py  export_service.py  join_service.py  matplotlib_theme_service.py  operation_history_service.py  r_plumber_client.py  result_contract_service.py  sample_alignment_service.py  storage_service.py  transform_service.py
backend/app/tasks/: analysis_tasks.py  export_tasks.py
backend/app/workers/: celery_worker.py
backend/r_plumber/: plumber.R  start.R
backend/r_plumber/R/: anova.R  assumptions.R  helpers.R  (+6 more)
backend/tests/: conftest.py  test_auth_routes.py  test_auth_service.py  test_dataset_ingest.py  test_e2e_analysis.py  test_health.py  test_r_plumber_client.py  test_security.py
(+97 files in other folders)
