[project]
name = "data-analysis-platform"
version = "0.1.0"
description = "Scientific data analysis platform backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.21.0",
    "celery>=5.4.0",
    "redis>=5.2.0",
    "pandas>=2.2.0",
    "numpy>=2.1.0",
    "scipy>=1.14.0",
    "statsmodels>=0.14.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "matplotlib>=3.9.0",
    "httpx>=0.28.0",
    "PyJWT>=2.10.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
